# journey-to-ephesus

./: Makefile  README.md
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.svelte  app.css
client/src/lib/: api.ts  router.ts
client/src/lib/components/: CoinCard.svelte  CoinMetadata.svelte  CoinViewer.svelte  FileDropzone.svelte  LoadingOverlay.svelte  Navbar.svelte  ViewerControls.svelte
client/src/lib/pages/: CoinDetail.svelte  Home.svelte  Upload.svelte
client/src/lib/stores/: coins.ts  theme.ts  viewer.ts
server/: Cargo.toml
server/data/: coins.json  ephesus.db
server/data/models/: antonious-obv.glb  antonious-rev.glb
server/src/: main.rs
